REGRESSION(280109@main): [macOS iOS Debug wk2] ASSERTION FAILED: Completion handler should always be called https://bugs.webkit.org/show_bug.cgi?id=275709 rdar://130233442

Reviewed by Rob Buis.

* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebCore/loader/FrameLoader.cpp:
(WebCore::FrameLoader::loadPostRequest):

Canonical link: https://commits.webkit.org/280327@main